# dns_tester

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  es.neikon.dns_tester.json  meson.build  python-deps.json  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
data/: es.neikon.dns_tester.desktop.in  es.neikon.dns_tester.gschema.xml  es.neikon.dns_tester.metainfo.xml.in  es.neikon.dns_tester.service.in  meson.build
data/icons/: meson.build
data/provider-icons/: meson.build
po/: POTFILES.in  meson.build
src/: __init__.py  appdata.py  aux.py  benchmark.py  default_dns.py  dns_groups.py  dns_store.py  dns_tester.gresource.xml  dns_tester.in  main.py  meson.build  provider_icons.py  region_info.py  window.py  window.ui
