# Bundled provider logos live outside the app icon directory in the source tree,
# but are still installed into the icon theme so AdwSidebar can load them by name.

provider_scalable_icons = files(
  'scalable/es.neikon.dns_tester-provider-adguard.svg',
  'scalable/es.neikon.dns_tester-provider-mullvad.svg',
  'scalable/es.neikon.dns_tester-provider-nextdns.svg',
  'scalable/es.neikon.dns_tester-provider-quad9.svg',
)
install_data(
  provider_scalable_icons,
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'apps'
)

install_data(
  '128x128/es.neikon.dns_tester-provider-controld.png',
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / '128x128' / 'apps'
)

install_data(
  '128x128/es.neikon.dns_tester-provider-dns4eu.png',
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / '128x128' / 'apps'
)

install_data(
  [
    '192x192/es.neikon.dns_tester-provider-flashstart.png',
    '192x192/es.neikon.dns_tester-provider-gcore.png',
  ],
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / '192x192' / 'apps'
)

install_data(
  '48x48/es.neikon.dns_tester-provider-cloudflare.png',
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / '48x48' / 'apps'
)

install_data(
  '32x32/es.neikon.dns_tester-provider-google.png',
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / '32x32' / 'apps'
)
